# project64

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  BUILDING.md  CHANGELOG.md  Directory.Build.props  Directory.Build.targets  JS-API-Documentation.html  Project64.dsw  Project64.ncb  Project64.opt  Project64.sln  Project64.vs2008.sln  Project64.vs2010.sln  Project64.vs2013.sln  Project64.vs2015.sln  README.md  apidoc.htm  appveyor.yml  changes.txt  git.properties  readme.md
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  sonar-project.properties
.github/ISSUE_TEMPLATE/: BUG.md  BUG.yml  FEATURE.md  FEATURE.yml  bug_report.md  config.yml
API/: Documentation.html
API/Scripts/: api_documentation.js  example.js
Android/: .gitignore  .project.init  AndroidManifest.xml  build.gradle  build.xml  buildAssets.xml  copySource.xml  gradle.properties  project.properties  settings.gradle
Android/.externalToolBuilders/: Build Assets.launch  Copy Project64 C++ Source.launch
Android/Script/: Setup.cmd  UpdateVersionNumber.cmd  build.cmd  buildAssets.cmd  copySource.cmd
Android/app/: build.gradle
Android/assets/: licence.htm  loading.htm
Android/config/: version.gradle.in
Android/jni/: Android.mk  Application.mk
Android/jni/Common/: .gitignore  AndroidManifest.xml  CMakeLists.txt  common.mk
Android/jni/Plugin-Rsp/: AndroidManifest.xml  CMakeLists.txt  build.gradle
Android/jni/Plugin-RspHle/: .gitignore  AndroidManifest.xml  CMakeLists.txt  PluginRSP.mk
Android/jni/Project64-audio/: .gitignore  AndroidManifest.xml  CMakeLists.txt  Project64-audio.mk
Android/jni/Project64-bridge/: AndroidManifest.xml  CMakeLists.txt  Project64-bridge.mk  build.gradle
Android/jni/Project64-core/: .gitignore  AndroidManifest.xml  CMakeLists.txt  Project64-core.mk
Android/jni/Project64-rsp-core/: .gitignore  AndroidManifest.xml  CMakeLists.txt
Android/jni/Project64-video/: .gitignore  AndroidManifest.xml  CMakeLists.txt  Project64-video.mk
Android/libs/: commons-lang-2.6.jar.properties
Artwork/: Installer Sidebar.psd  pj64 icon small.psd  pj64 icon.psd  pj64 logo.psd  publisherlogo.psd
Config/: Audio.rdb  Blank Project64.rdb  Glide64.rdb  Project64.cfg  Project64.cfg.development  Project64.cht  Project64.enh  Project64.rdb  Project64.rdx  Project64Video.rdb  RDB Info.txt  Video.rdb
Config/Cheats/: 007 - The World Is Not Enough (E) (M3).cht  007 - The World Is Not Enough (U).cht  007 - The World is Not Enough (E) (M3).cht  007 - The World is Not Enough (U).cht  007 The World is Not Enough (E).cht  1080 SNOWBOARDING.cht  1080 Snowboarding (E) (M4).cht  1080 Snowboarding (JU) (M2).cht  40 Winks (E) (M3) (Prototype).cht  64 Oozumou (J).cht  64 Oozumou 2 (J).cht  A Bug's Life (E).cht  A Bug's Life (F).cht  A Bug's Life (I).cht  A Bug's Life (U).cht  A Bug's Life.cht  AEROGAUGE.cht  AeroFighters Assault (E) (M3).cht  AeroGauge (E) (M3).cht  AeroGauge (J) (V1.0) (Kiosk Demo).cht  AeroGauge (J) (V1.1).cht  AeroGauge (U).cht  Aerofighter's Assault (U).cht  Aidyn Chronicles - The First Mage (E).cht  Aidyn Chronicles - The First Mage (U) (V1.0).cht  Aidyn Chronicles - The First Mage (U) (V1.1).cht  Air Boarder 64 (E).cht  Air Boarder 64 (J).cht  Airboarder 64 (E).cht  Akumajou Dracula Mokushiroku - Real Action Adventure (J).cht  Akumajou Dracula Mokushiroku Gaiden - Legend of Cornell (J).cht  All Star Baseball '99 (E).cht  All Star Tennis '99 (E).cht  All Star Tennis '99 (U).cht  All-Star Baseball '99 (U).cht  All-Star Baseball 2000 (U).cht  Animal Crossing (T-Eng).cht  Armorines - Project S.W.A.R.M. (E).cht  Armorines - Project S.W.A.R.M. (G).cht  Armorines - Project S.W.A.R.M. (U).cht  (+707 more)
Config/Enhancement/: 1080 Snowboarding (U).enh  Aidyn Chronicles - The First Mage (U) [!] (V1.0).enh  Armorines - Project S.W.A.R.M. (U).enh  Banjo-Kazooie (U) (V1.0).enh  Banjo-Kazooie (U) (V1.1).enh  Banjo-Tooie (U).enh  Beetle Adventure Racing! (U).enh  Body Harvest (U).enh  Bomberman 64 (U).enh  Bomberman Hero (U).enh  Bomberman Hero - Mirian Oujo wo Sukue! (J).enh  Diddy Kong Racing (E) (M3) (V1.0).enh  Diddy Kong Racing (E) (M3) (V1.1).enh  Diddy Kong Racing (J).enh  Diddy Kong Racing (U) (M2) (V1.0).enh  Diddy Kong Racing (U) (M2) (V1.1).enh  Dinosaur Planet (U) (Beta).enh  Doubutsu no Mori (J).enh  Dual Heroes (U).enh  Duke Nukem - ZER0 H0UR (E).enh  Duke Nukem - ZER0 H0UR (F).enh  Duke Nukem - ZER0 H0UR (U).enh  Excitebike 64 (U) (V1.0).enh  F-1 Pole Position 64 (U) (M3).enh  F-ZERO X (U).enh  Gex 64 - Enter the Gecko (U).enh  Iggy's Reckin' Balls (U).enh  Mario Golf (U).enh  (+52 more)
Docs/: BUILDING.md  CHANGELOG-ANDROID.md  CHANGELOG.md  SUPPORT.md  pj64 changes.txt
Lang/: Arabic.pj.Lang  Arabic.pj.Lang.txt  Bengali.pj.lang  Bosnian.pj.Lang  Bosnian.pj.Lang.txt  Brazilian Portuguese.pj.Lang  Bulgarian.pj.Lang  Catalan.pj.Lang  Chinese (Simplified).pj.Lang  Chinese (Taiwan).pj.Lang  Chinese (Traditional).pj.Lang  ChineseB5.pj.lang  ChineseGB.pj.lang  Czech.pj.Lang  Danish.pj.Lang  Dutch.pj.Lang  English.pj.Lang  English_alternative.pj.Lang  Finnish.pj.Lang  French.pj.Lang  German.pj.Lang  German_int.pj.Lang  German_localised.pj.Lang  Greek.pj.Lang  Hungarian.pj.Lang  Indonesian.pj.lang  Italian.pj.Lang  Italian_alternative.pj.Lang  Japanese.pj.Lang  Korean.pj.Lang  Lithuanian.pj.Lang  Norwegian.pj.Lang  Polish.pj.Lang  Portuguese.pj.Lang  Punjabi.pj.lang  Russian.pj.Lang  Spanish (South America).pj.Lang  Spanish (Spain).pj.Lang  Spanish.pj.Lang  Swedish.pj.Lang  (+4 more)
PropertySheets/: Debug.props  Debug.vsprops  Default.props  Default.vsprops  Platform.Debug.props  Platform.Release.props  Platform.props  Project.props  Release.props  Release.vsprops  Root.props  UpdateVersion.targets  Win32.Debug.props  Win32.Debug.vsprops  Win32.Release.props  Win32.Release.vsprops  Win32.props  Win32.vsprops  root.vsprops  x64.Debug.props  x64.Release.props  x64.props
Scripts/: api_documentation.js  example.js
Source/: .clang-format
_proposal/: Makefile  architecture.tex  description.tex  execsummary.tex  parallelism.tex  proposal.tex  schedule.tex  titlepage.tex
(+3245 files in other folders)
